--- a/index.html
+++ b/index.html
@@ -182,17 +182,13 @@
 									irresistible deal: <strong style=" color: #6c97d3;">20 FREE PILLS</strong> with
 									every order placed. <br>
 
-									But that's not all! We are committed to providing you with the best prices in the
-									market. If you happen to find a cheaper price elsewhere, please email us at
+									But that's not all! We are committed to providing you with the best prices in the market. If you happen to find a cheaper price elsewhere, please email us at 
 									<strong style=" color: #6c97d3;">
 										kamshop99@yahoo.co.uk
 									</strong>
-									. We guarantee that we will match that price and even include
-									20 additional free pills with your order! It's truly unbelievable! <br>
+									. .We guarantee that we will match that price and even include 20 additional free pills with your order! It's truly unbelievable!<br>
 
-									Rest assured, there's no need for discount codes. We will automatically add the free
-									pills to your order upon dispatch. So why wait? Take advantage of this amazing offer
-									and place your order today! <br>
+									Rest assured, there's no need for discount codes. We will automatically add the free pills to your order upon dispatch. So why wait? Take advantage of this amazing offer and place your order today!<br>
 
 									Visit <a href="http://www.kamagra99.com"> Kamagra</a> to explore our selection and
 									place your order. <br>
